--- a/Assingment2_N01454501/Assingment2_N01454501.csproj
+++ b/Assingment2_N01454501/Assingment2_N01454501.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PalindromeController.cs" />
     <Compile Include="Controllers\SoundsFishyController.cs" />
     <Compile Include="Controllers\TelemarketerController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
